# minui

./: .gitignore  Cargo.toml  README.md
examples/: app_runner.rs  basic_usage.rs  color_usage.rs  custom_colors.rs  input_demo.rs  mouse_test.rs  movement.rs  scroll_demo.rs  scrolling_demo.rs  syntax_profile_demo.rs  table_demo.rs  text_input_demo.rs  widget_usage.rs
src/: app.rs  color.rs  error.rs  event.rs  lib.rs  macros.rs  window.rs
src/game/: collision.rs  game_loop.rs  map.rs  mod.rs  sprite.rs  tile.rs
src/input/: clipboard.rs  keyboard.rs  mod.rs  mouse.rs  scroll.rs  tests.rs
src/render/: buffer.rs  mod.rs  viewport.rs
src/term/: capabilities.rs  mod.rs
src/text/: mod.rs
src/ui/: interaction.rs  mod.rs  scene.rs
src/widgets/: border.rs  common.rs  container.rs  figlet.rs  helpers.rs  input.rs  label.rs  layout.rs  mod.rs  panel.rs  scrollbox.rs  spinner.rs  statusbar.rs  table.rs  text.rs  text_block.rs  tooltip.rs  viewport.rs
src/widgets/controls/: mod.rs  scrollbar.rs  slider.rs
src/widgets/scroll/: mod.rs  state.rs
