[package]
name = "minui"
version = "0.3.2"
edition = "2024"
description = "A minimalist Rust framework for TUIs and terminal games."
authors = ["Jack Derksen <jmderksen9@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/JackDerksen/minui"
homepage = "https://github.com/JackDerksen/minui"
readme = "README.md"
keywords = ["terminal", "framework", "tui", "ui", "crossterm"]
categories = ["command-line-interface", "game-development", "graphics"]

[dependencies]
crossterm = "0.28.1"
thiserror = "2.0.11"
crokey = "1.1.0"

[lib]
name = "minui"
path = "src/lib.rs"
